# SOIL

./: .gitignore  CMakeLists.txt
include/: stbi_DDS_aug_c.h
src/: stb_image_aug.c
